--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,9 @@
         <module>rpc-client</module>
         <module>rpc-registry</module>
         <module>rpc-registry-zookeeper</module>
+        <module>rpc-sample-api</module>
+        <module>rpc-sample-client</module>
+        <module>rpc-sample-server</module>
     </modules>
 
 </project>
